--- a/cycle_django/cycle/static/css/styles.css
+++ b/cycle_django/cycle/static/css/styles.css
@@ -3,3 +3,13 @@
     padding: 0;
     list-style: none;
 }
+table.table_no_borders {border-style: none;}
+table.table_no_borders th {}
+table.table_no_borders tr {}
+table.table_no_borders td {}
+table.table_inner_borders {border-style: none;}
+table.table_inner_borders th {padding-left: 5px; padding-right: 5px; border-right: 1px solid black; border-bottom: 1px solid black;}
+table.table_inner_borders th:last-of-type {border-right: none; border-bottom: 1px solid black;}
+table.table_inner_borders tr {}
+table.table_inner_borders td {padding-left: 5px; padding-right: 5px; border-right: 1px solid black;}
+table.table_inner_borders td:last-of-type {border: none;}
