--- a/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
@@ -5,7 +5,7 @@
   <h3>Cycle ride list</h3>
   {% if cycle_data_list %}
   <ul>
-    <p>Number of Entries: {{ cycle_data_list.count }}</p>
+    <p>Number of (shown) entries: {{ cycle_data_list.count }}</p>
     <table  class='table_inner_borders'>
       <tr> <th> </th> <th>Date</th> <th>Distance</th> <th>Time</th> <th>Speed</th> </tr>
       {% for entry in cycle_data_list %}
