Updates after a year

--- a/cycle_django/cycle/templates/base_generic.html
+++ b/cycle_django/cycle/templates/base_generic.html
@@ -20,7 +20,7 @@
           <li><a href="{% url 'cycle_data_w' %}">Combined week</a></li>
           <li><a href="{% url 'cycle_data_m' %}">Combined month</a></li>
           <li><a href="{% url 'cycle_data_y' %}">Combined year</a></li>
-          <li><a href="http://90.243.61.204:8040/">PHP and JavaScript version</a></li>
+          <li><a href="http://ronnyerrmann.ddns.net:80/">PHP and JavaScript version</a></li>
         </ul>
      {% endblock %}
       </div>
