--- a/cycle_django/cycle/templates/cycle_data/cycle_detail.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_detail.html
@@ -6,26 +6,26 @@
     <div style="margin-left:20px;margin-top:20px">
       <h4>Day/Trip</h4>
       <p><strong>Distance:</strong> {{ cycle.daykm }}</p>
-      <p><strong>Time:</strong> {{ cycle.display_sec_day }}</p>
+      <p><strong>Time:</strong> {{ cycle.dayseconds }}</p>
       <p><strong>Speed:</strong> {{ cycle.daykmh }}</p>
     </div>
     <div style="margin-left:20px;margin-top:20px">
       <h4>Total (from bicycle computer)</h4>
       <p><strong>Distance:</strong> {{ cycle.totalkm }}</p>
-      <p><strong>Time:</strong> {{ cycle.display_sec_total }}</p>
+      <p><strong>Time:</strong> {{ cycle.totalseconds }}</p>
       <p><strong>Speed:</strong> {{ cycle.totalkmh }}</p>
     </div>
     <div style="margin-left:20px;margin-top:20px">
       <h4>Culmulative values</h4>
       <p><strong>Distance:</strong> {{ cycle.culmkm }}</p>
-      <p><strong>Time:</strong> {{ cycle.display_sec_culm }}</p>
+      <p><strong>Time:</strong> {{ cycle.culmseconds }}</p>
     </div>
   {% elif dataType == 'w' %}
     <h3><a href="">{{ cycle.week_starting_on }}</a></h3>
     <div style="margin-left:20px;margin-top:20px">
       <p><strong>Number of Days/Trips:</strong> {{ cycle.weekdays }}</p>
       <p><strong>Distance:</strong> {{ cycle.weekkm }}</p>
-      <p><strong>Time:</strong> {{ cycle.display_sec }}</p>
+      <p><strong>Time:</strong> {{ cycle.weekseconds }}</p>
       <p><strong>Speed:</strong> {{ cycle.weekkmh }}</p>
     </div>
   {% elif dataType == 'm' %}
@@ -33,7 +33,7 @@
     <div style="margin-left:20px;margin-top:20px">
       <p><strong>Number of Days/Trips:</strong> {{ cycle.monthdays }}</p>
       <p><strong>Distance:</strong> {{ cycle.monthkm }}</p>
-      <p><strong>Time:</strong> {{ cycle.display_sec }}</p>
+      <p><strong>Time:</strong> {{ cycle.monthseconds }}</p>
       <p><strong>Speed:</strong> {{ cycle.monthkmh }}</p>
     </div>
   {% elif dataType == 'y' %}
@@ -41,7 +41,7 @@
     <div style="margin-left:20px;margin-top:20px">
       <p><strong>Number of Days/Trips:</strong> {{ cycle.yeardays }}</p>
       <p><strong>Distance:</strong> {{ cycle.yearkm }}</p>
-      <p><strong>Time:</strong> {{ cycle.display_sec }}</p>
+      <p><strong>Time:</strong> {{ cycle.yearseconds }}</p>
       <p><strong>Speed:</strong> {{ cycle.yearkmh }}</p>
     </div>
   {% else %}
