--- a/cycle_django/cycle/templates/index.html
+++ b/cycle_django/cycle/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <p>Welcome to Ronny's cycle rides, a website developed by <em>Ronny Errmann</em>!</p>
+  <p>Welcome to Ronny's cycle rides, a website developed by <em>Ronny Errmann</em></p>
   <h3>Dynamic content</h3>
   <p>The database has the following records:</p>
   <ul>
