Add link to Admin Site (to add data)

--- a/cycle_django/cycle/templates/base_generic.html
+++ b/cycle_django/cycle/templates/base_generic.html
@@ -22,6 +22,7 @@
           <li><a href="{% url 'cycle_data_m' %}">Combined month</a></li>
           <li><a href="{% url 'cycle_data_y' %}">Combined year</a></li>
           <li><a href="http://ronnyerrmann.ddns.net:80/">PHP and JavaScript version</a></li>
+          <li><a href="{% url 'admin:index' %}">Admin</a></li>
         </ul>
      {% endblock %}
       </div>
