Add a static plot to the page
- currently it's date-distance-speed
- todo: should be made flexible to plot things depending on user selection
- todo: for the daily data plot also other information, e.g total-culm

--- a/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
@@ -5,6 +5,9 @@
   <h3>Cycle ride list</h3>
   {% if cycle_data_list %}
   <ul>
+    {% autoescape off %}
+        {{ plot_div }}
+    {% endautoescape %}
     <p>Number of (shown) entries: {{ cycle_data_list.count }}</p>
     <table  class='table_inner_borders'>
       <tr> <th> </th> <th>Date</th> <th>Distance</th> <th>Time</th> <th>Speed</th> </tr>
