Make the static plot into a dynamic plot
- todo: for the daily data plot also other information, e.g total-culm

--- a/cycle_django/cycle/templates/base_generic.html
+++ b/cycle_django/cycle/templates/base_generic.html
@@ -17,7 +17,7 @@
       {% block sidebar %}
         <ul class="sidebar-nav">
           <li><a href="{% url 'index' %}">Home</a></li>
-          <li><a href="{% url 'cycle_data' %}">All cycle data</a></li>
+          <li><a href="{% url 'cycle_data' %}">Daily cycle data</a></li>
           <li><a href="{% url 'cycle_data_w' %}">Combined week</a></li>
           <li><a href="{% url 'cycle_data_m' %}">Combined month</a></li>
           <li><a href="{% url 'cycle_data_y' %}">Combined year</a></li>
