--- a/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
@@ -8,6 +8,10 @@
     {% autoescape off %}
         {{ plot_div }}
     {% endautoescape %}
+    <form method="get">
+      {{ plotdataform }}
+      <button type="submit">Replot</button>
+    </form>
     <p>Number of (shown) entries: {{ cycle_data_list.count }}</p>
     <table  class='table_inner_borders'>
       <tr> <th> </th> <th>Date</th> <th>Distance</th> <th>Time</th> <th>Speed</th> </tr>
