Plot the Duration better
- plotly doesn't plot timedelta objects in a nice way yet

--- a/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
@@ -11,6 +11,7 @@
     <form method="get">
       {{ plotdataform }}
       <button type="submit">Replot</button>
+      <p>(Unfortunately, plotly doesn't handle timedelta objects yet)</p>
     </form>
     <p>Number of (shown) entries: {{ cycle_data_list.count }}</p>
     <table  class='table_inner_borders'>
