--- a/cycle_django/cycle/templates/cycle_data/cycle_detail.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_detail.html
@@ -5,44 +5,28 @@
     <h3><a href="">{{ cycle.entryid }}: {{ cycle.date }}</a></h3><!-- author detail link not yet defined -->
     <div style="margin-left:20px;margin-top:20px">
       <h4>Day/Trip</h4>
-      <p><strong>Distance:</strong> {{ cycle.daykm }}</p>
-      <p><strong>Time:</strong> {{ cycle.dayseconds }}</p>
-      <p><strong>Speed:</strong> {{ cycle.daykmh }}</p>
+      <p><strong>Distance:</strong> {{ cycle.distance }}</p>
+      <p><strong>Time:</strong> {{ cycle.duration }}</p>
+      <p><strong>Speed:</strong> {{ cycle.speed }}</p>
     </div>
     <div style="margin-left:20px;margin-top:20px">
       <h4>Total (from bicycle computer)</h4>
-      <p><strong>Distance:</strong> {{ cycle.totalkm }}</p>
-      <p><strong>Time:</strong> {{ cycle.totalseconds }}</p>
-      <p><strong>Speed:</strong> {{ cycle.totalkmh }}</p>
+      <p><strong>Distance:</strong> {{ cycle.totaldistance }}</p>
+      <p><strong>Time:</strong> {{ cycle.totalduration }}</p>
+      <p><strong>Speed:</strong> {{ cycle.totalspeed }}</p>
     </div>
     <div style="margin-left:20px;margin-top:20px">
       <h4>Culmulative values</h4>
-      <p><strong>Distance:</strong> {{ cycle.culmkm }}</p>
-      <p><strong>Time:</strong> {{ cycle.culmseconds }}</p>
+      <p><strong>Distance:</strong> {{ cycle.cumdistance }}</p>
+      <p><strong>Time:</strong> {{ cycle.cumduration }}</p>
     </div>
-  {% elif dataType == 'w' %}
-    <h3><a href="">{{ cycle.week_starting_on }}</a></h3>
+  {% elif dataType == 'wmy' %}
+    <h3><a href="">{{ cycle.date }}</a></h3>
     <div style="margin-left:20px;margin-top:20px">
-      <p><strong>Number of Days/Trips:</strong> {{ cycle.weekdays }}</p>
-      <p><strong>Distance:</strong> {{ cycle.weekkm }}</p>
-      <p><strong>Time:</strong> {{ cycle.weekseconds }}</p>
-      <p><strong>Speed:</strong> {{ cycle.weekkmh }}</p>
-    </div>
-  {% elif dataType == 'm' %}
-    <h3><a href="">{{ cycle.month_starting_on }}</a></h3>
-    <div style="margin-left:20px;margin-top:20px">
-      <p><strong>Number of Days/Trips:</strong> {{ cycle.monthdays }}</p>
-      <p><strong>Distance:</strong> {{ cycle.monthkm }}</p>
-      <p><strong>Time:</strong> {{ cycle.monthseconds }}</p>
-      <p><strong>Speed:</strong> {{ cycle.monthkmh }}</p>
-    </div>
-  {% elif dataType == 'y' %}
-    <h3>{{ cycle.year_starting_on }}</h3>
-    <div style="margin-left:20px;margin-top:20px">
-      <p><strong>Number of Days/Trips:</strong> {{ cycle.yeardays }}</p>
-      <p><strong>Distance:</strong> {{ cycle.yearkm }}</p>
-      <p><strong>Time:</strong> {{ cycle.yearseconds }}</p>
-      <p><strong>Speed:</strong> {{ cycle.yearkmh }}</p>
+      <p><strong>Number of Days/Trips:</strong> {{ cycle.numberofdays }}</p>
+      <p><strong>Distance:</strong> {{ cycle.distance }}</p>
+      <p><strong>Time:</strong> {{ cycle.duration }}</p>
+      <p><strong>Speed:</strong> {{ cycle.speed }}</p>
     </div>
   {% else %}
     Unknown dataType: {{ dataType }}
