--- a/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
@@ -10,11 +10,12 @@
     <form method="get">
       {{ plotdataform }}
       <button type="submit">Replot</button>
-      <p>(Unfortunately, plotly doesn't handle timedelta objects yet)</p>
+      <p>(Unfortunately, plotly doesn't handle timedelta objects yet, hence all durations are given from 1970-01-01)</p>
     </form>
     {% autoescape off %}
         {{ plot_total_div }}
         {{ plot_diff_div }}
+        {{ plot_frac_div }}
     {% endautoescape %}
     <p>Number of (shown) entries: {{ cycle_data_list.count }}</p>
     <table  class='table_inner_borders'>
