Create the views and add the GPS information to existing views

--- a/cycle_django/cycle/templates/base_generic.html
+++ b/cycle_django/cycle/templates/base_generic.html
@@ -21,6 +21,7 @@
           <li><a href="{% url 'cycle_data_w' %}">Combined week</a></li>
           <li><a href="{% url 'cycle_data_m' %}">Combined month</a></li>
           <li><a href="{% url 'cycle_data_y' %}">Combined year</a></li>
+          <li><a href="{% url 'gps_data' %}">GPS Files</a></li>
           <li><a href="http://ronnyerrmann.ddns.net:80/">PHP and JavaScript version</a></li>
           <li><a href="{% url 'admin:index' %}">Admin</a></li>
         </ul>
