--- a/cycle_django/cycle/templates/index.html
+++ b/cycle_django/cycle/templates/index.html
@@ -9,6 +9,8 @@
     <li><strong>Number of entries:</strong> {{ number_of_days }}
       <strong> Covered weeks:</strong> {{ number_of_weeks }}
       <strong> Covered months:</strong> {{ number_of_months }}
-      <strong> Covered years:</strong> {{ number_of_years }}</li>
+      <strong> Covered years:</strong> {{ number_of_years }}
+      <strong> Number of GPS files:</strong> {{ number_of_gps_files }}
+    </li>
   </ul>
 {% endblock %}
