Use folium to draw a map

--- a/cycle_django/cycle/templates/base_generic.html
+++ b/cycle_django/cycle/templates/base_generic.html
@@ -9,6 +9,8 @@
   {% load static %}
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  {% block extra_head %}
+  {% endblock %}
 </head>
 <body>
   <div class="container-fluid">
