--- a/cycle_django/cycle/templates/cycle_data/cycle_detail.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_detail.html
@@ -1,5 +1,12 @@
 {% extends "base_generic.html" %}
 
+{% load leaflet_tags %}
+
+{% block extra_head %}
+  {% leaflet_js %}
+  {% leaflet_css %}
+{% endblock %}
+
 {% block content %}
   {% if dataType == 'd' %}
     <h3><a href="">{{ cycle.entryid }}: {{ cycle.date }}</a></h3><!-- author detail link not yet defined -->
@@ -28,8 +35,29 @@
       <p><strong>Time:</strong> {{ cycle.duration }}</p>
       <p><strong>Speed:</strong> {{ cycle.speed }}</p>
     </div>
-  {% else %}
-    Unknown dataType: {{ dataType }}
+  {% endif %}
+
+  {% if gps_positions %}
+    {% if gps is not None %}
+        <div style="margin-left:20px;margin-top:20px">
+          <h4>{{ gps.filename }}</h4>
+          <p><strong>Start:</strong> {{ gps.start }} &nbsp; <strong>End:</strong> {{ gps.end }}</p>
+        </div>
+    {% endif %}
+    <div style="margin-left:20px;margin-top:20px">
+      <h4>Map:</h4>
+    </div>
+    <div id="map" style="height: 600px;"></div>
+    <script>
+        var map = L.map('map').setView({{ center | safe }}, {{ zoom }});
+
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+        }).addTo(map);
+        {% for position in gps_positions %}
+            L.polyline({{ position | safe }}, { color: 'blue' }).addTo(map);
+        {% endfor %}
+    </script>
   {% endif %}
 
 {% endblock %}
