--- a/cycle_django/cycle/templates/index.html
+++ b/cycle_django/cycle/templates/index.html
@@ -6,11 +6,11 @@
   <p>The database has the following records:</p>
   <ul>
     <li><strong>Start date:</strong> {{ start_date }}<strong> End date:</strong> {{ end_date }}</li>
-    <li><strong>Number of entries:</strong> {{ number_of_days }}
-      <strong> Covered weeks:</strong> {{ number_of_weeks }}
-      <strong> Covered months:</strong> {{ number_of_months }}
-      <strong> Covered years:</strong> {{ number_of_years }}
-      <strong> Number of GPS files:</strong> {{ number_of_gps_files }}
-    </li>
+    <li><strong>Number of entries:</strong> {{ number_of_days }}</li>
+    <li><strong> Covered weeks:</strong> {{ number_of_weeks }}</li>
+    <li><strong> Covered months:</strong> {{ number_of_months }}</li>
+    <li><strong> Covered years:</strong> {{ number_of_years }}</li>
+    <li><strong> Number of GPS files:</strong> {{ number_of_gps_files }}</li>
   </ul>
+  <p><a href="https://github.com/ronnyerrmann/cycle_logging">Github page of the project</a></p>
 {% endblock %}
