Add Histogram plots for distance, duration, and speed

--- a/cycle_django/cycle/templates/cycle_data/cycle_extra_plots.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_extra_plots.html
@@ -4,6 +4,9 @@
   <h3>Extra plots for daily data</h3>
   {% autoescape off %}
     {{ plot_total_div }}
+    {{ plot_hist_dist }}
+    {{ plot_hist_dur }}
+    {{ plot_hist_speed }}
     {{ plot_diff_div }}
     {{ plot_frac_div }}
   {% endautoescape %}
