Improvements with outputs: - if many gps files are shown, only show a subset of the data points - list view: show daily/weekly/... - added custom filter for that - filter out bad gps files

--- a/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_data_list.html
@@ -1,7 +1,9 @@
 {% extends "base_generic.html" %}
 
+{% load filters %}
+
 {% block content %}
-  <h3>Cycle ride list</h3>
+  <h3>Cycle ride list - {{ dataset|safe|replace:"day|Dai" }}ly</h3>
   {% if cycle_data_list %}
   <ul>
     {% autoescape off %}
