--- a/cycle_django/cycle/templates/cycle_data/cycle_detail.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_detail.html
@@ -45,7 +45,11 @@
         </div>
     {% endif %}
     <div style="margin-left:20px;margin-top:20px">
-      <h4>Map:</h4>
+      {% if settings.slice > 1 %}
+        <p>Map: (only showing every {{ settings.slice }}{{ settings.slice_ending }} point - select fewer files for better resolution)</p>
+      {% else %}
+        <p>Map:</p>
+      {% endif %}
     </div>
     <div id="map" style="height: 600px;"></div>
     <script>
