Add basic plot that analyses the gps data

--- a/cycle_django/cycle/templates/cycle_data/cycle_detail.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_detail.html
@@ -53,6 +53,9 @@
         <p>Map:</p>
       {% endif %}
     </div>
+    {% autoescape off %}
+        {{ plot_div }}
+    {% endautoescape %}
     <div id="map" style="height: 600px;"></div>
     <script>
         var map = L.map('map').setView({{ center | safe }}, {{ zoom }});
