--- a/cycle_django/cycle/templates/base_generic.html
+++ b/cycle_django/cycle/templates/base_generic.html
@@ -23,6 +23,7 @@
           <li><a href="{% url 'cycle_data_w' %}">Combined week</a></li>
           <li><a href="{% url 'cycle_data_m' %}">Combined month</a></li>
           <li><a href="{% url 'cycle_data_y' %}">Combined year</a></li>
+          <li><a href="{% url 'cycle_extra_plots' %}">Daily cycle: extra plots</a></li>
           <li><a href="{% url 'gps_data' %}">GPS Files</a></li>
           <li><a href="https://github.com/ronnyerrmann/cycle_logging">Github page of the project</a></li>
           <li><a href="http://ronnyerrmann.ddns.net:80/">PHP and JavaScript version</a></li>
