Use a form to select a date range for GPS data

--- a/cycle_django/cycle/templates/cycle_data/cycle_detail.html
+++ b/cycle_django/cycle/templates/cycle_data/cycle_detail.html
@@ -52,6 +52,11 @@
       {% else %}
         <p>Map:</p>
       {% endif %}
+      <form method="get">
+        Select a different time period for GPS data:
+        {{ gpsdatarangeform }}
+      <button type="submit">Replot</button>
+    </form>
     </div>
     {% autoescape off %}
         {{ plot_div }}
