Plot all the Geolocation on the map - add the new view (only admin) for it - removed un-editable information from Admin view when adding a new Cycle ride

--- a/cycle_django/cycle/templates/base_generic.html
+++ b/cycle_django/cycle/templates/base_generic.html
@@ -27,6 +27,9 @@
           <li><a href="{% url 'gps_data' %}">GPS Files</a></li>
           <li><a href="https://github.com/ronnyerrmann/cycle_logging">Github page of the project</a></li>
           <li><a href="http://ronnyerrmann.ddns.net:80/">PHP and JavaScript version</a></li>
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'add_places_admin' %}">GPS Places</a></li>
+          {% endif %}
           <li><a href="{% url 'admin:index' %}">Admin</a></li>
         </ul>
      {% endblock %}
